unpackaged/main/default/objects/litify_docs__Packet_Template_Junction__c/litify_docs__Packet_Template_Junction__c.object-meta.xml
<CustomObject>
    <description>Junction between Packet and Template, allowing for a many to many relationship.</description>
    <label>Merge Packet Template Junction</label>
    <nameField>
        <displayFormat>Packet-{0000}</displayFormat>
        <label>Merge Packet Template Junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Merge Packet Template Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>