unpackaged/main/default/objects/litify_docs__Packet_Template_Junction__c/fields/litify_docs__Packet__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Packet__c</fullName>
    <description>Master Detail for Packet Junction</description>
    <inlineHelpText>Master Detail for Packet Junction</inlineHelpText>
    <label>Packet</label>
    <referenceTo>litify_docs__Packet__c</referenceTo>
    <relationshipLabel>Templates</relationshipLabel>
    <relationshipName>Templates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>