unpackaged/main/default/objects/litify_docs__Packet_Template_Junction__c/fields/litify_docs__Template__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Template__c</fullName>
    <description>Template Master Detail for Junction</description>
    <inlineHelpText>Template Master Detail for Junction</inlineHelpText>
    <label>Template</label>
    <referenceTo>litify_docs__Template__c</referenceTo>
    <relationshipLabel>Packets</relationshipLabel>
    <relationshipName>Packets</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>