unpackaged/main/default/objects/litify_docs__Packet_Template_Junction__c/fields/litify_docs__Template_Order__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Template_Order__c</fullName>
    <description>Controls the order in which templates appear during packet merge, and in lists of templates within a packet.</description>
    <inlineHelpText>Controls the order in which templates appear during packet merge, and in lists of templates within a packet.</inlineHelpText>
    <label>Template Order</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>